Fix: Fix whitespace for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,11 @@ body {
     font-family: "researcher", sans-serif;
     font-weight: 500;
     font-style: normal;
-    height: 100vh;
-    overflow: hidden;
+    height: 100svh;
 }
 
 #root {
-    height: 100vh;
+    height: 100svh;
 }
 
 ::-moz-selection {
@@ -27,4 +26,10 @@ body {
 ::selection {
     color: #000000;
     background: #FFFF00;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #000000;
+    }
 }
